--- a/bike_predictions.ipynb
+++ b/bike_predictions.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# IMPORTS & DEFINITIONS\n",
+    "\n",
     "import csv, sys\n",
     "import datetime\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,7 +21,7 @@
     "import math\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "DUD_VALUE= 0\n",
+    "DUD_VALUE= 0 # change from 0 to something like 123 for debugging\n",
     "TOTAL_ROWS= 2228278 # This number is greater than the total amount of rows circa epoch change to 27th, but it still works\n",
     "INPUT_ROWS_LIMIT= TOTAL_ROWS\n",
     "FILENAME= 'dublinbikes_2020_Q1.csv'\n",
@@ -91,6 +93,8 @@
    },
    "outputs": [],
    "source": [
+    "# DATA STRUCTURING\n",
+    "\n",
     "total_capacity= 0 # not in use currently\n",
     "index= []; daily_epoch_time= []; epoch_time= []; percent_bikes= [];\n",
     "stations= [Station(i) for i in range(1, MAX_STATION_ID + 1)] # note: MAX_STATION_ID + 1 is not included in the range\n",
@@ -139,16 +143,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fullness= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
-    "fullness_in10= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
-    "fullness_in30= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
-    "fullness_in60= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
-    "fullness_percent= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.float)\n",
-    "bikes_changes_past5= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
-    "bikes_changes_past15= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
-    "bikes_changes_past45= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), 0, dtype=np.int)\n",
-    "day_of_week= np.full((MAX_TIME, len(DAYS_OF_WEEK)), 0, dtype=np.int)\n",
-    "hour_of_day= np.full((MAX_TIME, HOURS), 0, dtype=np.float)\n",
+    "# FEATURE DATA PREPERATION\n",
+    "\n",
+    "fullness= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_in10= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_in30= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_in60= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "fullness_percent= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.float)\n",
+    "bikes_changes_past5= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "bikes_changes_past15= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "bikes_changes_past45= np.full((MAX_TIME, MAX_STATION_ID - len(MISSING_STATIONS)), DUD_VALUE, dtype=np.int)\n",
+    "day_of_week= np.full((MAX_TIME, len(DAYS_OF_WEEK)), DUD_VALUE, dtype=np.int)\n",
+    "hour_of_day= np.full((MAX_TIME, HOURS), DUD_VALUE, dtype=np.float)\n",
     "\n",
     "station_index_decrement= 1 # this is a varying offset for the indexing of stations that accounts for missing stations that are being ignored\n",
     "for epoch_day_i in range(TOTAL_DAYS):\n",
@@ -231,64 +237,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(fullness_percent.shape)\n",
-    "# print(fullness_in10.shape)\n",
-    "# print(bikes_changes_past5.shape)\n",
-    "# print(bikes_changes_past15.shape)\n",
-    "# print(bikes_changes_past45.shape)\n",
-    "# print(day_of_week.shape)\n",
-    "# print(hour_of_day.shape)\n",
+    "# APPROACH DEFINITIONS\n",
     "\n",
-    "# counter= 0\n",
-    "# limit= 22051\n",
-    "#for row_i in range(limit):\n",
-    "#     print(\"\\n####################################\")\n",
-    "#     print(day_of_week[row_i])\n",
-    "#     print(hour_of_day[row_i])\n",
-    "#     print(fullness_percent[row_i])\n",
-    "#     print(fullness[row_i])\n",
-    "#     print(fullness_in10[row_i])\n",
-    "#     print(fullness_in30[row_i])\n",
-    "#     print(fullness_in60[row_i])\n",
-    "#     print(bikes_changes_past5[row_i])\n",
-    "#     print(bikes_changes_past15[row_i])\n",
-    "#     print(bikes_changes_past45[row_i])\n",
-    "#     print(\"####################################\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data split  1  accuracy:  96.40710865746992  %\n",
-      "Data split  2  accuracy:  97.45073515003462  %\n",
-      "Data split  3  accuracy:  98.44706688236448  %\n",
-      "Data split  4  accuracy:  96.08811423178055  %\n",
-      "Data split  5  accuracy:  67.28540332565863  %\n",
-      "\n",
-      "Average accuracy of model:  91.13568564946164  %\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "def run_approach1(station_index):\n",
-    "    index= get_station_id(\"PORTOBELLO ROAD\")\n",
-    "    y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
+    "def run_approach1(station_name):\n",
+    "    index= get_station_id(station_name)\n",
+    "    \n",
+    "    y= np.full((MAX_TIME, 3), 0, dtype=np.int) # change the 3 to a 6 to do both stations at once on the generalised-training form of an approach\n",
     "    y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
-    "    #y[0:MAX_TIME, 1:2]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
     "    y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
-    "    #y[0:MAX_TIME, 3:4]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
     "    y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
+    "    #y[0:MAX_TIME, 3:4]= np.reshape(fullness_in10[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
+    "    #y[0:MAX_TIME, 4:5]= np.reshape(fullness_in30[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
     "    #y[0:MAX_TIME, 5:6]= np.reshape(fullness_in60[:,get_station_id(\"CUSTOM HOUSE QUAY\")], (MAX_TIME, 1))\n",
     "\n",
     "    X= np.full((MAX_TIME, hour_of_day.shape[1] + day_of_week.shape[1] + 4 \\\n",
@@ -324,67 +287,60 @@
     "\n",
     "    # regr= MLPRegressor(random_state= 1, max_iter= 500).fit(X_train, y_train)\n",
     "    # scores= cross_val_score(regr, X, y, cv=5)\n",
-    "    # print(scores)"
+    "    # print(scores)\n",
+    "    \n",
+    "def run_approach2(station_name):\n",
+    "    X= np.full((MAX_TIME, 2 + 3 \\\n",
+    "            #* bikes_changes_past5.shape[1] \\\n",
+    "           ), -1, dtype=np.float)\n",
+    "    \n",
+    "    positions= []; t= 0\n",
+    "    while t < 2 * math.pi:\n",
+    "        positions.append((1 - (R * math.cos(t) + R), R * math.sin(t) + R))\n",
+    "        t+= STEP_SIZE\n",
+    "    pos_i= 0\n",
+    "    for time_i in range(MAX_TIME):\n",
+    "        X[time_i, 0]= positions[pos_i][0]\n",
+    "        X[time_i, 1]= positions[pos_i][1]\n",
+    "        pos_i= (pos_i + 1) % len(positions)\n",
+    "    \n",
+    "    index= get_station_id(station_name)\n",
+    "    X[0:MAX_TIME, 2:3]= bikes_changes_past5[0:MAX_TIME, index:index+1] \n",
+    "    X[0:MAX_TIME, 3:4]= bikes_changes_past15[0:MAX_TIME, index:index+1] \n",
+    "    X[0:MAX_TIME, 4:5]= fullness_percent[0:MAX_TIME, index:index+1] \n",
+    "    # X[0:MAX_TIME, 2:110]= bikes_changes_past5\n",
+    "    # X[0:MAX_TIME, 110:218]= bikes_changes_past15\n",
+    "    # X[0:MAX_TIME, 218:326]= fullness_percent\n",
+    "    \n",
+    "    y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
+    "    y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
+    "    y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
+    "    y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
+    "    \n",
+    "    neigh= KNeighborsRegressor(n_neighbors= 30, weights='distance')\n",
+    "    cv_scores= cross_val_score(neigh, X, y, cv=5)\n",
+    "    print(cv_scores) # print each cv score (accuracy) and average them\n",
+    "    print('cv_scores mean:{}'.format(np.mean(cv_scores)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.94025454 0.93384574 0.95707228 0.94576826 0.34707973]\n",
+      "cv_scores mean:0.8248041100626186\n"
+     ]
+    }
+   ],
    "source": [
-    "X= np.full((MAX_TIME, 2 + 3 * bikes_changes_past5.shape[1]), -1, dtype=np.float)\n",
+    "# DRIVER\n",
     "\n",
-    "positions= []\n",
-    "\n",
-    "t= 0\n",
-    "while t < 2 * math.pi:\n",
-    "    positions.append((1 - (R * math.cos(t) + R), R * math.sin(t) + R))\n",
-    "    t+= STEP_SIZE\n",
-    "\n",
-    "pos_i= 0\n",
-    "for time_i in range(MAX_TIME):\n",
-    "    X[time_i, 0]= positions[pos_i][0]\n",
-    "    X[time_i, 1]= positions[pos_i][1]\n",
-    "    pos_i= (pos_i + 1) % len(positions)\n",
-    "\n",
-    "index= get_station_id(\"PORTOBELLO ROAD\")\n",
-    "X[0:MAX_TIME, 2:110]= bikes_changes_past5\n",
-    "X[0:MAX_TIME, 110:218]= bikes_changes_past15\n",
-    "X[0:MAX_TIME, 218:326]= fullness_percent\n",
-    "\n",
-    "y= np.full((MAX_TIME, 3), 0, dtype=np.int)\n",
-    "y[0:MAX_TIME, 0:1]= np.reshape(fullness_in10[:,index], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 1:2]= np.reshape(fullness_in30[:,index], (MAX_TIME, 1))\n",
-    "y[0:MAX_TIME, 2:3]= np.reshape(fullness_in60[:,index], (MAX_TIME, 1))\n",
-    "\n",
-    "#print(X)\n",
-    "\n",
-    "neigh= KNeighborsRegressor(n_neighbors= 30, weights='distance')\n",
-    "\n",
-    "cv_scores= cross_val_score(neigh, X, y, cv=5)\n",
-    "\n",
-    "#print each cv score (accuracy) and average them\n",
-    "print(cv_scores)\n",
-    "print('cv_scores mean:{}'.format(np.mean(cv_scores)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# # Test KNReg\n",
-    "\n",
-    "# X= [[75, 25, 1, 1], [50, 25, 1, 1], [25, 25, 1, 1], [75, 75, 1, 1], [50, 75, 1, 1], [25, 75, 1, 1]] # day time\n",
-    "# y= [[1, 2], [1, 2], [1, 2], [2, 1], [2, 1], [2, 1]]\n",
-    "\n",
-    "# neigh= KNeighborsRegressor(n_neighbors= 3, weights='uniform').fit(X, y)\n",
-    "\n",
-    "# print(neigh.predict([[50, 80, 1, 1]]))"
+    "run_approach2(\"PORTOBELLO ROAD\")"
    ]
   }
  ],
